# MCPPythonDemo

./: .env.example  .gitignore  LICENSE.txt  M1_VALIDATION_GUIDE.md  README.md  pyproject.toml
.squad/: .first-run  ceremonies.md  decisions-archive.md  decisions.md  routing.md  team.md
.squad/casting/: history.json  registry.json
.squad/identity/: now.md  wisdom.md
.squad/log/: 2026-04-13T21:50:06Z-repo-analysis.md  2026-04-13T22:03:56Z-m1-implementation.md  2026-04-13T22:36:32Z-m1-parity-implementation.md  2026-04-14T07:15:48Z-milestone-1-live-run.md  2026-04-14T08:00:28Z-foundry-runtime-check.md  2026-04-14T11:40:00Z-publication-session.md  2026-04-14T12:30:00Z-milestone-2-prep.md  2026-04-14T13:00:00Z-milestone-2-delivery.md  2026-04-14T14:00:00Z-milestone-3-memory-consolidation.md  2026-04-14T15:20:00Z-milestone-4-branch.md  2026-04-14T15:25:00Z-milestone-4-implementation.md  2026-04-14T15:30:00Z-scribe-m4-memory-consolidation.md  2026-04-14T15:40:00Z-milestone-5-implementation.md  2026-04-14T16:04:52Z-milestone-7-delivery.md
.squad/orchestration-log/: 2026-04-13T21:50:06Z-ash.md  2026-04-13T21:50:06Z-dallas.md  2026-04-13T22:03:56Z-ash.md  2026-04-13T22:03:56Z-dallas.md  2026-04-13T22:03:56Z-newt.md  2026-04-13T22:03:56Z-ripley.md  (+18 more)
docs/: MCPDemoRoadmap.md  TESTING.md
scripts/: smoke_test.py
tests/: http_harness.py  test_client.py  test_linux_diagnostics.py  test_log_snapshots.py  test_m1_smoke.py  test_m2_smoke.py  test_m3_smoke.py  test_m4_http.py  test_m5_http.py  test_m7_http.py  test_proc_snapshots.py  test_processes.py  test_system_info.py
(+64 files in other folders)
